--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="gmtoolkit-version" content="0.2.0-dev" />
+    <!-- Version: 0.2.0-dev -->
+    <title>GM-Toolkit</title>
+    <link rel="stylesheet" href="/styles/base.css" />
+    <link rel="stylesheet" href="/styles/theme.css" />
+    <link rel="stylesheet" href="/styles/components.css" />
+    <link rel="stylesheet" href="/styles/print.css" media="print" />
+  </head>
+  <body>
+    <div id="app" class="app-shell">
+      <div class="app-loading">Loading GM-Toolkit…</div>
+    </div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
